Changed Binary Name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 project( RobotVision )
 find_package( OpenCV REQUIRED )
-add_executable( Main main.cpp hsvrange.cpp)
-target_link_libraries( Main ${OpenCV_LIBS} )
+add_executable( RobotVision main.cpp hsvrange.cpp)
+target_link_libraries( RobotVision ${OpenCV_LIBS} )
