--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,8 @@
 # CMake build folders
 **/build
 
-# Visual Studio temporary files
-.browse.VC*
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
