--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,19 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "echo",
+    "command": "make",
     "isShellCommand": true,
-    "args": ["Hello World"],
-    "showOutput": "always"
+    "showOutput": "always",
+    "suppressTaskName": true,
+    "tasks": [
+        {
+            "taskName": "build",
+            "isBuildCommand": true,
+            "args": ["all"]
+        },
+        {
+            "taskName": "clean",
+            "args": ["clean"]
+        }
+    ]
 }
