Added Support For Filtering Contours

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ project( RobotVision )
 find_package( OpenCV REQUIRED )
 add_executable( RobotVision main.cpp hsvrange.cpp)
 target_link_libraries( RobotVision ${OpenCV_LIBS} )
+set (CMAKE_CXX_STANDARD 11)
